# aero-ros-pkg

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.indigo  Dockerfile.kinetic  Dockerfile.melodic  README.md  package.xml
aero_addon/: CMakeLists.txt  package.xml
aero_addon/src/: GraspAddon.cc  GraspAddonExtra.cc
aero_description/: CMakeLists.txt  README.md  clean.sh  package.xml  setup.sh  setup_arm.sh
aero_description/aero_arm/: aero-arm-upper.txt  aero-arm.txt  controllers.cfg
aero_description/aero_four_legs/: aero_upper.txt
aero_description/aero_wheels/: aero-wheels.txt  applications.cfg  controllers.cfg  controllers.txt  detections.cfg
aero_description/aero_wheels_typeC/: controllers.cfg
aero_description/common_urdf/: gazebo.xacro
aero_description/launch/: view_gazebo.launch
aero_description/models/: ARM_base_R1_MIR.wrl  PDgains.sav  RU-66.wrl  SH_FINGER_2_0_LP.wrl  SH_FINGER_2_2_LP.wrl  SK_ARM1.wrl  SK_ARM2.wrl  SK_EL.wrl  SK_KNEE.wrl  SK_P.wrl  SK_P_MIR.wrl  SK_R.wrl  SK_R_MIR.wrl  SK_WST.wrl  SK_cover_7P_AL1_scaled.wrl  SK_cover_7P_AL3.wrl  SK_cover_7P_AL3_MIR.wrl  SK_cover_7P_Face.wrl  aero-arm-wheels.urdf  aero-arm.urdf  aero-arm.wrl  aero-arm.yaml  aero-lower.wrl  aero-lower_nosim.xml  aero-stick-figure.yaml  aero.urdf  aero_upper.l  aero_upper.wrl  aero_upper.xml  aero_upper.yaml  aero_upper_nosim.RobotHardware.conf  aero_upper_nosim.conf  cover_7P_WST.wrl  elbow-p.csv  knee-p.csv  lamia_s.csv  neck-p.csv  neck-r.csv  samplerobot.yaml  shoulder-r.csv  (+3 more)
aero_description/scripts/: configure_applications.sh  configure_controllers.sh  create_eusmodel.sh  create_urdf.sh  gen_from_wrl.sh  install_aerocd.sh  install_srv.sh  make_angle_to_stroke_header.sh  make_controller.sh  make_joint_state_publisher.sh  make_stroke_to_angle_header.sh  setup_models_directory.sh  setup_moveit_config.sh  unused_angle_to_stroke.sh
aero_description/typeF/: README.md  aero_upper.txt  controllers.cfg  robot.cfg
aero_description/typeFBDSy/: README.md  aero-wheels.txt  robot.cfg
aero_description/typeFCET/: robot.cfg
aero_gazebo/: CMakeLists.txt  README.md  package.xml
aero_gazebo/launch/: aero_gazebo.launch
aero_gazebo/map/: map.pgm
aero_gazebo/src/: MimicPlugin.cpp  MimicPlugin.h  gazebo_ros_planar_move.cpp  gazebo_ros_planar_move.h
aero_gazebo/test/: test_initial.test
aero_gazebo/world/: aero_empty.world  aero_shelf.world
aero_network_tools/: CMakeLists.txt  package.xml
aero_network_tools/euslisp/: auto_aero_roseus.l  cmd_narrow_s_convert.l  cmd_narrow_s_converter.l  ri_watcher.l
aero_network_tools/launch/: FC.launch  FC15.launch  OCS.launch  OCS15.launch  localFC.launch  localOCS.launch
aero_network_tools/msg/: AeroJointAngles.msg  AeroJointAnglesCompressed.msg  AeroJointStrokes.msg  AeroNarrowCommand.msg  AeroNarrowResponse.msg
aero_network_tools/scripts/: silverhammer_lowspeed_receiver.py  silverhammer_lowspeed_streamer.py
aero_ros_bridge/: CMakeLists.txt  README  catkin.cmake  package.xml
aero_ros_bridge/config/: aero-lower.txt  go_pos_calib.yaml  hrpsys_joint_id_map.txt
aero_ros_bridge/euslisp/: aero-ik.l  aero-interface.l  aero-lower-interface.l  aero-stick-figure-interface.l  aero-upper-interface.l  aero.l  debug.l  final-demos.l  physical-interaction-tools.l  samplerobot-interface.l  start-aero-ocs.l  test-aero-lower-motion.l  test-aero-lower.l  test-aero-upper.l  test-aero.l  test.l  tf.l  vision-configure.l  walker.l
aero_ros_bridge/models/: aero-lower.wrl  aero-lower.yaml  aero_upper.wrl  aero_upper.yaml
aero_ros_bridge/msg/: AeroJointAngles.msg  AeroNarrowCommand.msg  AeroNarrowResponse.msg
aero_ros_bridge/scripts/: make_angle_vector_command.sh  make_go_pos.sh  make_stroke_vector_command.sh
aero_ros_bridge/templates/: AeroJointStatePublisher.cc  Angle2Stroke.hh  Stroke2Angle.hh
aero_ros_bridge/test/: stroke-angle-test.l
aero_ros_bridge/utils/: get_log.sh
aero_ros_controller/: CMakeLists.txt  README.md  package.xml  test.launch  test.typeFjsk.launch
aero_ros_controller/src/: AeroGrasp.hh  AeroHandController.cc  AeroInterfaceTest.cc  AeroMoveBaseRH.cc  AeroMoveBaseRH.hh  RobotInterface.cc  aero_robot_hardware.cpp  aero_robot_hardware.h  aero_ros_controller.cpp
aero_ros_controller/test/: test_robot_interface.cpp  test_robot_interface.test
aero_samples/: CMakeLists.txt  README.md  package.xml
aero_samples/launch/: planning_sample.launch
aero_samples/models/: carry.dae  container.dae  ring.dae
aero_samples/scripts/: collada_model_publisher.py  container_model_publisher.py  movable_model_publisher.py
aero_samples/src/: async.cc  async_lifter_cancel.cc  async_neck_control.cc  convert_world.cc  fk.cc  fk.cpp  fullbody_test.cc  go_pos.cc  hand.cc  hand.cpp  ik.cc  ik.cpp  interpolation.cc  interpolation.cpp  look_at.cc  look_at.cpp  look_at_external.cc  look_at_topic.cc  minimum.cc  minimum.cpp  planning.cc  planning_constraint.cc  planning_constraint_with_lib.cc  planning_with_lib.cc  planning_with_lib_test.cc  send_angle_vector_async.cc  set_marker.cc  set_neck.cc  side_grasp.cc  side_grasp.cpp  top_grasp.cc  top_grasp.cpp  trajectory_lifter.cc  trajectory_lifter.cpp
aero_samples/tests/: fullbody_test.cc  lifter_ik.cc  stoa_atos.cc  test_ik.cc  test_ik.test  upper_controller_test.cc
aero_sensors/: CMakeLists.txt  README.md  package.xml
aero_sensors/config/: ps4eye_left.yaml  tilt_controller_config.yaml
aero_sensors/euslisp/: broadcast-head-tf.l  read-pointcloud.l
aero_sensors/launch/: start_dynamixel.launch  start_ps4eye.launch  start_ps4eye_capture.launch  start_ps4eye_proc.launch  start_ps4eye_proc_ocs.launch  start_tilt_laser.launch  start_urg.launch
aero_sensors/scripts/: camera_info_publisher.py  head_tf.py  set_ps4eye_autogain.sh  urg_tf.py  urg_to_pcl.py
aero_startup/: .dependencies  CMakeLists.txt  README.md  aero_bringup.launch  aeroutils.sh  applications.launch  package.xml
aero_std/: CMakeLists.txt  README.md  package.xml
aero_teleop/: CMakeLists.txt  package.xml
aero_world/: CMakeLists.txt  package.xml
hrpsys_aero_bridge/: CMakeLists.txt  README.md  package.xml
(+743 files in other folders)
