<?xml version="1.0"?>
<package>
  <name>aero_addon</name>
  <version>0.0.0</version>
  <description>The aero_addon package</description>

  <maintainer email="ssb@todo.todo">ssb</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>aero_std</build_depend>
  <run_depend>aero_std</run_depend>

  <export>
  </export>
</package>
