<?xml version="1.0"?>
<package>
  <name>aero_description</name>
  <version>2.1.0</version>
  <description>The aero_description package</description>

  <license>EPL</license>
  <maintainer email="sasabuchi@jsk.t.u-tokyo.ac.jp">
    Kazuhiro Sasabuchi
  </maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>xacro</build_depend>
  <run_depend>xacro</run_depend>

  <export/>
</package>
