<package>
  <name>aero_gazebo</name>
  <version>2.1.0</version>
  <description>aero_gazebo</description>
  <maintainer email="youhei@jsk.imi.i.u-tokyo.ac.jp"> YoheiKakiuchi </maintainer>

  <license>BSD</license>

  <!--url type="website"> </url-->
  <url type="bugtracker">https://github.com/aero-ros-pkg/issues</url>
  <url type="repository">https://github.com/aero-ros-pkg/aero_gazebo</url>

  <author email="youhei@jsk.imi.i.u-tokyo.ac.jp"> YoheiKakiuchi </author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
