<?xml version="1.0"?>
<package format="2">
  <name>aero_ros_controller</name>
  <version>2.0.0</version>
  <description> ros controller for aero using joint trajectory action </description>

  <maintainer email="youhei@jsk.imi.i.u-tokyo.ac.jp">Yohei Kakiuchi</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/</url>
  <url type="bugtracker">https://github.com/xxx/issues</url>
  <url type="repository">https://github.com/xxx </url>

  <author>Yohei Kakiuchi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>control_toolbox</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>transmission_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>joint_state_controller</depend>
  <depend>angles</depend>
  <depend>pluginlib</depend>
  <depend>urdf</depend>

  <depend>aero_startup</depend>

  <depend>rostest</depend>

  <export>
    <!--gazebo_ros_control plugin="${prefix}/robot_hw_sim_plugins.xml"/-->
  </export>
</package>
