<?xml version="1.0"?>
<package>
  <name>aero_samples</name>
  <version>2.0.0</version>
  <description>package for sample codes</description>

  <maintainer email="youhei@jsk.imi.i.u-tokyo.ac.jp"> Yohei Kakiuchi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>aero_std</build_depend>
  <run_depend>aero_std</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
