<?xml version="1.0"?>
<package format="2">
  <name>aero_samples</name>
  <version>2.1.0</version>
  <description>package for sample codes</description>

  <maintainer email="youhei@jsk.imi.i.u-tokyo.ac.jp"> Yohei Kakiuchi</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/</url>
  <url type="bugtracker">https://github.com/seed-solutions/aero-ros-pkg/issues </url>
  <url type="repository">https://github.com/aero_moveit_config </url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>aero_std</depend>

  <depend>rostest</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
