<package>
  <name>aero_sensors</name>
  <version>0.0.0</version>
  <description>
    Aero sensors
  </description>

  <license>BSD</license>
  <maintainer email="h-yaguchi@jsk.t.u-tokyo.ac.jp">
  Hiroaki Yaguchi
  </maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>ps4eye</run_depend>
  <run_depend>hokuyo_node</run_depend>
  <run_depend>dynamixel_controllers</run_depend>

  <export>
  </export>
</package>
