<?xml version="1.0"?>
<package>
  <name>aero_startup</name>
  <version>0.0.0</version>
  <description>The aero_startup package</description>

  <license>EPL</license>
  <maintainer email="h-yaguchi@jsk.t.u-tokyo.ac.jp">
    Hiroaki Yaguchi
  </maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>hrpsys_ros_bridge</build_depend>
  <build_depend>hrpsys</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>hrpsys_ros_bridge</run_depend>
  <run_depend>hrpsys</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export/>
</package>
