<?xml version="1.0"?>
<package>
  <name>aero_startup</name>
  <version>2.1.0</version>
  <description>The aero_startup package</description>

  <license>BSD</license>
  <maintainer email="youhei@jsk.imi.i.u-tokyo.ac.jp">
    Yohei Kakiuchi
  </maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslib</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roslib</run_depend>

  <run_depend>amcl</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>eband_local_planner</run_depend>
  <run_depend>teb_local_planner</run_depend>
  <run_depend>urg_node</run_depend>

  <export/>
</package>
